[package]
name = "filtersim"
version = "0.1.0"
edition = "2021"
authors = ["SolarLiner <solarliner@gmail.com>"]
description = "Simulation of simple filter circuit from ODEs"
license = "GPL-3.0-or-later"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
num-traits = "0.2.15"
rustfft = "6.0.1"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[dev-dependencies]
approx = "0.5.1"
